@@ -1,0 +1,30 @@
+#! /usr/bin/env python
+# Author: David Goodger
+# Contact: goodger@python.org
+# Revision: $Revision$
+# Date: $Date$
+# Copyright: This module has been placed in the public domain.
+
+"""
+Tests of document tree pickling.
+"""
+
+import unittest
+import DocutilsTestSupport              # must be imported before docutils
+import pickle
+from docutils import core
+
+
+class PickleTests(unittest.TestCase):
+
+    def test_pickle(self):
+        doctree = core.publish_doctree(
+            source='Title\n=====\n\nparagraph\n',
+            settings_overrides={'_disable_config': 1})
+        dill = pickle.dumps(doctree)
+        reconstituted = pickle.loads(dill)
+        self.assertEquals(doctree.pformat(), reconstituted.pformat())
+
+
+if __name__ == '__main__':
+    unittest.main()
